# crawl4mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  PARAMETERS.md  README.md  RRF.md  crawl-docs.md  crawl4mcp.code-workspace  delete_qdrant_collection.py  docker-compose.yml  pyproject.toml  start-dev.sh
.bivvy/: mdc1-climb.md  mdc1-moves.json  mdc2-moves.json
.bivvy/complete/: Fz2X-climb.md  Fz2X-moves.json
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
docs/: LOGGING.md
scripts/: ingest_claude_history.py
src/: __init__.py  app.py  config.py  crawl4ai_mcp.py  crawl4mcp-server.py  fastmcp_crawl4ai_server.py  mcp_setup.py  utils.py
src/tools/: analytics_tools.py  crawling_tools.py  management_tools.py  retrieval_tools.py  search_tools.py
src/utils/: __init__.py  analytics_utils.py  crawling_utils.py  embedding_utils.py  logging_utils.py  qdrant_utils.py  splade_utils.py  text_processing.py
src/utils/qdrant/: __init__.py  admin.py  constants.py  ingestion.py  retrieval.py  setup.py
