[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "mcp==1.7.1",
    "qdrant-client==1.14.2",
    "requests==2.32.3",
    "dotenv==0.9.9"
]

[project.optional-dependencies]
openai = ["openai==1.71.0"]
visualization = ["scikit-learn>=1.4.0", "plotly>=5.20.0", "numpy>=1.26.0", "nltk>=3.8.1"]