[project]
name = "crawl4mcp"
version = "0.1.0"
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.3",
    "mcp==1.9.4",
    "qdrant-client==1.14.2",
    "requests==2.32.3",
    "dotenv==0.9.9",
    "fastmcp==2.8.0",
    "rich>=13.0.0",
    "sentence-transformers>=2.7.0",
    "fastapi>=0.111.0",  # Added FastAPI for ASGI app and lifecycle
    "fastembed>=0.3.0",  # FastEmbed for optimized SPLADE models
]

[project.optional-dependencies]
visualization = ["scikit-learn>=1.4.0", "plotly>=5.20.0", "numpy>=1.26.0", "nltk>=3.8.1"]
intel-gpu = ["intel-extension-for-pytorch>=2.1.0", "torch>=2.1.0"]